--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:textSize="15dp"
                 app:tabTextColor="@color/unselecttab"
                 app:tabSelectedTextColor="@color/purple"
                 app:tabIndicatorColor="@color/purple"
