--- a/app/src/main/res/layout/layout_search_empty2.xml
+++ b/app/src/main/res/layout/layout_search_empty2.xml
@@ -37,7 +37,7 @@
                         android:layout_centerVertical="true"
                         android:layout_alignParentLeft="true"
                         android:scaleType="fitXY"
-                        android:background="@drawable/ico_input_pin"/>
+                        android:background="@drawable/ico_input_pin2"/>
 
                     <ImageView
                         android:id="@+id/iv_open"
@@ -60,7 +60,7 @@
                         android:ellipsize="end"
                         android:layout_marginLeft="8dp"
                         android:layout_centerVertical="true"
-                        android:textColor="@color/graytxt"
+                        android:textColor="@color/purple"
                         android:text="지역선택" />
                 </RelativeLayout>
 
@@ -82,7 +82,7 @@
                         android:layout_centerVertical="true"
                         android:layout_alignParentLeft="true"
                         android:scaleType="fitXY"
-                        android:background="@drawable/ico_input_category"/>
+                        android:background="@drawable/ico_input_category2"/>
 
                     <ImageView
                         android:id="@+id/iv_open2"
@@ -105,7 +105,7 @@
                         android:ellipsize="end"
                         android:layout_marginLeft="8dp"
                         android:layout_centerVertical="true"
-                        android:textColor="@color/graytxt"
+                        android:textColor="@color/purple"
                         android:text="테마선택" />
                 </RelativeLayout>
             </LinearLayout>
