--- a/app/src/main/res/layout/layout_favorite_activity_empty.xml
+++ b/app/src/main/res/layout/layout_favorite_activity_empty.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     android:id="@+id/empty_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/btn_go_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/activity_go"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:textColor="@color/purple"
-        android:textSize="15dp"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="vertical"
-        android:layout_marginBottom="24dp"
+        android:gravity="bottom"
         android:layout_above="@+id/btn_go_list">
         <TextView
             android:id="@+id/tv_info1"
@@ -42,4 +34,16 @@
             android:gravity="center"/>
     </LinearLayout>
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/btn_go_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="5dp"
+        android:text="@string/activity_go"
+        android:layout_centerInParent="true"
+        android:gravity="top|center_horizontal"
+        android:textColor="@color/purple"
+        android:textSize="15dp"/>
+
+</LinearLayout>
