--- a/app/src/main/res/layout/activity_all_privatedael.xml
+++ b/app/src/main/res/layout/activity_all_privatedael.xml
@@ -61,9 +61,9 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="89dp"
+            android:layout_height="45dp"
             android:textSize="13dp"
-            android:text="당일 예약에 한하여 최대 60%까지 추가 할인!\n원하시는 가격을 직접 제안해보세요. 호텔과 실시간으로 확인하여 고객님만을 위한 프라이빗 특가를 제공해드립니다"
+            android:text="나만을 위한 최대 60% 추가 할인에 도전하세요! "
             android:textColor="@color/termtext"
             android:background="@color/back_line"
             android:paddingLeft="16dp"
