--- a/app/src/main/res/layout/activity_reservation_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_reservation_hotel_detail.xml
@@ -424,7 +424,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="프라이빗딜 특별할인"
+                        android:text="프라이빗딜 추가 할인"
                         android:textSize="14dp"
                         android:textColor="@color/blacktxt"
                         android:gravity="left" />
@@ -1008,7 +1008,7 @@
                         android:background="@drawable/delete_round"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="5dp"
-                        android:text="숙박내역 삭제"
+                        android:text="예약 내역 삭제"
                         style="?android:attr/borderlessButtonStyle"/>
                     <Button
                         android:id="@+id/booking_receipt"
