--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -39,7 +39,7 @@
                 android:gravity="center_vertical"
                 android:inputType="textNoSuggestions|text"
                 android:textSize="15dp"
-                android:hint="검색어를 입력해주세요"
+                android:hint="지역, 상품명을 입력해주세요."
                 android:textColor="@color/purple"
                 android:layout_marginRight="10dp"
                 android:imeOptions="actionSearch"
