--- a/app/src/main/res/layout/layout_a_search_empty.xml
+++ b/app/src/main/res/layout/layout_a_search_empty.xml
@@ -110,7 +110,7 @@
         android:layout_marginTop="231dp"
         android:gravity="center"
         android:textSize="15dp"
-        android:text="해당 지역에 판매중인 상품이 없습니다"/>
+        android:text="검색하신 조건으로 예약 가능한 상품이 없습니다"/>
 
     <TextView
         android:id="@+id/sub"
@@ -121,6 +121,6 @@
         android:gravity="center"
         android:layout_marginTop="5dp"
         android:layout_below="@+id/title"
-        android:text="다른 지역이나 날짜로 검색해보세요"/>
+        android:text="다른 지역이나 카테고리로 검색해보세요"/>
 
 </RelativeLayout>
