상세페이지 편의시설 없을시 비노출, 예약하기 고객명 항시 활성화 수정

--- a/app/src/main/res/layout/activity_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_hotel_detail.xml
@@ -227,7 +227,8 @@
 
                 <include layout="@layout/layout_detail_recommend" />
 
-                <include layout="@layout/layout_detail_facility" />
+                <include android:id="@+id/parent_filter"
+                    layout="@layout/layout_detail_facility" />
 
                 <View
                     android:layout_width="match_parent"
