--- a/app/src/main/res/layout/activity_ha_search.xml
+++ b/app/src/main/res/layout/activity_ha_search.xml
@@ -67,42 +67,68 @@
         android:divider="@android:color/transparent"
         android:listSelector="@android:color/transparent"></ListView>
 
-    <LinearLayout
-        android:id="@+id/btn_filter"
-        android:layout_width="125dp"
-        android:layout_height="48dp"
-        android:orientation="horizontal"
-        android:gravity="center"
+    <RelativeLayout
+        android:id="@+id/h_filter"
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/filter_bg">
-        <ImageView
-            android:layout_width="15dp"
-            android:layout_height="16dp"
-            android:background="@drawable/ico_filter"
-            android:layout_marginLeft="17dp"
-            android:scaleType="fitXY"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:layout_marginLeft="7dp"
-            android:textColor="@color/termtext"
-            android:layout_marginRight="17dp"
-            android:text="@string/filter_title"/>
-    </LinearLayout>
+        android:gravity="center">
+
+        <LinearLayout
+            android:id="@+id/btn_filter"
+            android:layout_width="125dp"
+            android:layout_height="48dp"
+            android:orientation="horizontal"
+            android:visibility="visible"
+            android:gravity="center"
+            android:background="@drawable/filter_bg">
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="16dp"
+                android:background="@drawable/ico_filter"
+                android:layout_marginLeft="17dp"
+                android:scaleType="fitXY"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12dp"
+                android:layout_marginLeft="7dp"
+                android:textColor="@color/termtext"
+                android:layout_marginRight="17dp"
+                android:clickable="false"
+                android:text="@string/filter_title"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/count_view"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="105dp"
+            android:background="@drawable/style_oval_red">
+
+            <TextView
+                android:id="@+id/tv_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                tools:text="1"
+                android:textSize="13dp"
+                android:textColor="@color/white"/>
+        </LinearLayout>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/bt_scroll"
         android:layout_width="42dp"
         android:layout_height="42dp"
+        android:visibility="gone"
         android:background="@drawable/btn_screenup_bg"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="22dp"
-        style="?android:attr/borderlessButtonStyle"/>
+        android:layout_marginBottom="22dp" />
 
 
     <RelativeLayout
