--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -52,7 +52,7 @@
         <item>2 이상</item>
         <item>3 이상</item>
         <item>4 이상</item>
-        <item>5 이상</item>
+        <item>5 </item>
     </string-array>
 
     <string-array name="category_code">
