결제 주소 변경, test tag적용, 예약 상세 페이지에서 휴대폰 -> 서버에서 내려주는 값으로 수정, 예약하기 값 포인트 적용시 - 나오는거 수정, 날짜 패턴수정,  mainactivity에서 resume에서 디버깅탐지로직 적용

--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -52,6 +52,7 @@
 		android:id="@+id/view_filter"
 		android:layout_width="match_parent"
 		android:layout_height="48dp"
+		android:visibility="gone"
 		android:layout_below="@+id/tab_layout">
 
 		<TextView
