--- a/app/src/main/res/layout/layout_reservation_discount.xml
+++ b/app/src/main/res/layout/layout_reservation_discount.xml
@@ -55,7 +55,7 @@
             android:id="@+id/private_discount"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:layout_weight="0.75"
+            android:layout_weight="1"
             android:gravity="right|center"
             android:maxLength="10"
             android:paddingLeft="5dp"
@@ -83,60 +83,83 @@
             android:layout_weight="1"
             android:gravity="left"
             android:textColor="@color/blacktxt"
-            android:textSize="14dp" />
+            android:textSize="14dp"
+            tools:text="적립금"/>
 
-        <EditText
-            android:id="@+id/point_discount"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_weight="1"
-            android:gravity="right|center"
-            android:maxLength="10"
-            android:inputType="number"
-            android:paddingLeft="5dp"
-            android:paddingRight="8dp"
-            android:singleLine="true"
-            android:background="@drawable/style_edittext_gray_border"
-            android:textColor="@color/blacktxt"
-            android:textColorHint="@color/coupon_dis"
-            android:hint="최소 1,000원부터"
-            android:drawablePadding="8dp"
-            android:longClickable="false"
-            android:textSize="12dp" />
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_point_ok"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="@drawable/purple_and_white_round"
-            android:text="적용"
-            android:textSize="12dp"
-            android:textColor="@color/purple"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1.5"
-            style="?android:attr/borderlessButtonStyle"/>
+            <EditText
+                android:id="@+id/point_discount"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:gravity="right|center"
+                android:maxLength="10"
+                android:inputType="number"
+                android:paddingLeft="5dp"
+                android:paddingRight="8dp"
+                android:singleLine="true"
+                android:background="@drawable/style_edittext_gray_border"
+                android:textColor="@color/blacktxt"
+                android:textColorHint="@color/coupon_dis"
+                android:drawablePadding="8dp"
+                android:longClickable="false"
+                android:textSize="12dp" />
+
+            <Button
+                android:id="@+id/btn_point_ok"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="@drawable/purple_and_white_round"
+                android:text="적용"
+                android:textSize="12dp"
+                android:textColor="@color/purple"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="2"
+                style="?android:attr/borderlessButtonStyle"/>
+        </LinearLayout>
     </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/rl_all_point"
         android:layout_width="match_parent"
-        android:layout_height="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="14dp"
+        android:visibility="visible"
         android:gravity="center">
 
         <TextView
-            android:id="@+id/btn_point_total"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:textSize="13dp"
-            android:layout_centerInParent="true"
-            android:text="@string/reservation_point_total"
-            android:textColor="@color/purple"/>
+            android:text="* 최소 1,000원부터 사용"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:textColor="@color/graytxt"
+            android:textSize="12dp" />
 
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/btn_point_total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:textSize="13dp"
+                android:layout_centerInParent="true"
+                android:text="@string/reservation_point_total"
+                android:textColor="@color/purple"/>
+        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll_coupon"
@@ -152,10 +175,11 @@
             android:id="@+id/tv_coupon_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.3"
+            android:layout_weight="1"
             android:gravity="left"
             android:textColor="@color/blacktxt"
-            android:textSize="14dp" />
+            android:textSize="14dp"
+            tools:text="쿠폰사용"/>
 
         <Spinner
             android:id="@+id/coupon_use"
