--- a/app/src/main/res/layout/activity_activity_detail.xml
+++ b/app/src/main/res/layout/activity_activity_detail.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:background="@android:color/transparent"
-        android:theme="@style/AppTheme.TransNav">
+        android:theme="@style/AppTheme.TransNav"
+        app:elevation="0dp">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -45,8 +46,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:gravity="center_vertical"
-                    android:layout_marginRight="28dp"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginBottom="45dp">
 
                     <TextView
@@ -83,9 +84,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@android:color/transparent"
+                app:elevation="0dp"
                 app:layout_collapseMode="pin">
 
                 <RelativeLayout
+                    android:id="@+id/parent_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -149,7 +152,6 @@
 
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
-
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
