--- a/app/src/main/res/layout/activity_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_hotel_detail.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:background="@android:color/transparent"
-        android:theme="@style/AppTheme.TransNav">
+        android:theme="@style/AppTheme.TransNav"
+        app:elevation="0dp">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -45,8 +46,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:gravity="center_vertical"
-                    android:layout_marginRight="28dp"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginBottom="45dp">
 
                     <TextView
@@ -78,77 +79,78 @@
                 </RelativeLayout>
             </RelativeLayout>
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@android:color/transparent"
-                app:layout_collapseMode="pin">
-
-                <RelativeLayout
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@android:color/transparent"
+                    app:layout_collapseMode="pin">
 
-                    <LinearLayout
-                        android:id="@+id/btn_back"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_centerVertical="true">
-                        <ImageView
-                            android:id="@+id/icon_back"
+                    <RelativeLayout
+                        android:id="@+id/parent_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <LinearLayout
+                            android:id="@+id/btn_back"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:background="@drawable/ico_titbarw_back"
-                            android:layout_gravity="center"/>
-                    </LinearLayout>
+                            android:layout_centerVertical="true">
+                            <ImageView
+                                android:id="@+id/icon_back"
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:background="@drawable/ico_titbarw_back"
+                                android:layout_gravity="center"/>
+                        </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/btn_zzim"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="16dp"
-                        android:layout_alignParentRight="true">
-                        <ImageView
-                            android:id="@+id/icon_zzim"
+                        <LinearLayout
+                            android:id="@+id/btn_zzim"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:background="@drawable/ico_titbarw_favorite"
-                            android:layout_gravity="center"/>
-                    </LinearLayout>
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="16dp"
+                            android:layout_alignParentRight="true">
+                            <ImageView
+                                android:id="@+id/icon_zzim"
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:background="@drawable/ico_titbarw_favorite"
+                                android:layout_gravity="center"/>
+                        </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/btn_share"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="24dp"
-                        android:layout_toLeftOf="@id/btn_zzim">
-                        <ImageView
-                            android:id="@+id/icon_share"
+                        <LinearLayout
+                            android:id="@+id/btn_share"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:background="@drawable/ico_titbarw_share"
-                            android:layout_gravity="center"/>
-                    </LinearLayout>
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="24dp"
+                            android:layout_toLeftOf="@id/btn_zzim">
+                            <ImageView
+                                android:id="@+id/icon_share"
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:background="@drawable/ico_titbarw_share"
+                                android:layout_gravity="center"/>
+                        </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/tv_title_bar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_centerVertical="true"
-                        android:layout_toRightOf="@id/btn_back"
-                        android:layout_toLeftOf="@id/btn_share"
-                        android:singleLine="true"
-                        android:textSize="16dp"
-                        android:maxLines="1"
-                        android:gravity="left|center_vertical"
-                        android:layout_marginLeft="10dp"
-                        android:ellipsize="end"
-                        tools:text="xxxxxxxxxxxxxx"/>
+                        <TextView
+                            android:id="@+id/tv_title_bar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@id/btn_back"
+                            android:layout_toLeftOf="@id/btn_share"
+                            android:singleLine="true"
+                            android:textSize="16dp"
+                            android:maxLines="1"
+                            android:gravity="left|center_vertical"
+                            android:layout_marginLeft="10dp"
+                            android:ellipsize="end"
+                            tools:text="xxxxxxxxxxxxxx"/>
 
-                </RelativeLayout>
-            </android.support.v7.widget.Toolbar>
+                    </RelativeLayout>
+                </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
