--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -16,6 +16,7 @@
             android:background="@color/white"
             app:contentInsetEnd="0dp"
             app:contentInsetStart="0dp"
+            app:elevation="0dp"
             app:popupTheme="@style/Theme.AppCompat.NoActionBar">
 
             <RelativeLayout
