--- a/app/src/main/res/layout/activity_near_map.xml
+++ b/app/src/main/res/layout/activity_near_map.xml
@@ -60,27 +60,34 @@
         </LinearLayout>
     </RelativeLayout>
 
+    <View
+        android:id="@+id/v_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/toolbar"
+        android:background="@color/bg_background" />
+
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar">
+        android:layout_below="@id/v_line">
     </fragment>
 
     <RelativeLayout
         android:id="@+id/info"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="102dp"
         android:background="@drawable/style_detail_top"
         android:visibility="gone"
         android:layout_alignParentBottom="true"
-        android:clickable="true"
-        android:padding="10dp">
+        android:clickable="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -88,7 +95,6 @@
                 android:layout_weight=".7"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:paddingTop="12dp"
                 android:gravity="left"
                 android:orientation="vertical">
 
@@ -167,6 +173,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="left|center_vertical"
                         android:layout_marginLeft="2dp"
+                        android:layout_marginTop="1dp"
                         android:textSize="12dp"
                         android:background="@color/white"
                         android:textColor="@color/blacktxt"
@@ -180,6 +187,7 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:gravity="right|bottom"
+                android:layout_marginTop="1dp"
                 android:orientation="vertical">
 
                 <TextView
