--- a/app/src/main/res/layout/activity_reservation_activity.xml
+++ b/app/src/main/res/layout/activity_reservation_activity.xml
@@ -14,6 +14,7 @@
         android:background="@android:color/transparent"
         app:contentInsetEnd="0dp"
         app:contentInsetStart="0dp"
+        app:elevation="0dp"
         app:popupTheme="@style/Theme.AppCompat.NoActionBar">
 
         <RelativeLayout
