--- a/app/src/main/res/layout/layout_activity_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_activity_hotdeal_item.xml
@@ -62,7 +62,7 @@
             <View
                 android:id="@+id/text_bar"
                 android:layout_width="1dp"
-                android:layout_height="match_parent"
+                android:layout_height="10dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:background="@color/textbar"/>
