--- a/app/src/main/res/layout/layout_detail_hotel_room_item.xml
+++ b/app/src/main/res/layout/layout_detail_hotel_room_item.xml
@@ -57,7 +57,7 @@
             android:id="@+id/img_room"
             android:layout_width="134dp"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             app:riv_corner_radius="2dp"
             android:background="@color/holder_c"/>
         
@@ -69,10 +69,10 @@
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="6dp"/>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/ll_room_detail_info"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="134dp"
             android:layout_toRightOf="@id/img_room"
             android:layout_marginLeft="17dp"
             android:orientation="vertical">
@@ -105,6 +105,7 @@
                 android:id="@+id/ll_detail2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/ll_detail1"
                 android:gravity="center"
                 android:layout_marginTop="3dp"
                 android:orientation="horizontal">
@@ -130,6 +131,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_below="@+id/ll_detail2"
                 android:layout_marginTop="3dp"
                 android:orientation="horizontal">
 
@@ -152,21 +154,25 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="17dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_alignParentBottom="true">
 
                 <TextView
                     android:id="@+id/tv_detail_per"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/redtext"
-                    android:textSize="13dp"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="2dp"
+                    android:layout_alignParentBottom="true"
                     tools:text="48%↓"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
                     android:orientation="horizontal">
 
                     <TextView
@@ -175,6 +181,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/blacktxt"
                         android:textSize="17dp"
+                        android:textStyle="bold"
                         tools:text="205,700"/>
 
                     <TextView
@@ -185,7 +192,7 @@
                         android:text="원"/>
                 </LinearLayout>
             </RelativeLayout>
-        </LinearLayout>
+        </RelativeLayout>
     </RelativeLayout>
 
     <LinearLayout
