--- a/app/src/main/res/layout/layout_detail_room_img_item.xml
+++ b/app/src/main/res/layout/layout_detail_room_img_item.xml
@@ -11,6 +11,6 @@
         android:layout_centerInParent="true"
         android:layout_marginRight="10dp"
         app:riv_corner_radius="2dp"
-        android:scaleType="fitXY" />
+        android:scaleType="centerCrop" />
 
 </RelativeLayout>
