--- a/app/src/main/res/layout/layout_hotel_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_hotel_hotdeal_item.xml
@@ -16,7 +16,7 @@
             android:id="@+id/iv_image"
             android:layout_width="270dp"
             android:layout_height="150dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             app:riv_corner_radius="2dp"/>
 
         <ImageView
@@ -62,7 +62,7 @@
             <View
                 android:id="@+id/text_bar"
                 android:layout_width="1dp"
-                android:layout_height="match_parent"
+                android:layout_height="10dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:background="@color/textbar"/>
