--- a/app/src/main/res/layout/layout_recent_item.xml
+++ b/app/src/main/res/layout/layout_recent_item.xml
@@ -24,7 +24,7 @@
             android:layout_width="270dp"
             android:layout_height="150dp"
             app:riv_corner_radius="2dp"
-            android:scaleType="fitXY" />
+            android:scaleType="centerCrop" />
         
         <ImageView
             android:id="@+id/btn_favorite"
