--- a/app/src/main/res/layout/layout_stay_item.xml
+++ b/app/src/main/res/layout/layout_stay_item.xml
@@ -28,7 +28,7 @@
             android:id="@+id/iv_img"
             android:layout_width="match_parent"
             android:layout_height="160dp"
-            android:scaleType="fitXY"/>
+            android:scaleType="centerCrop"/>
 
         <ImageView
             android:id="@+id/iv_favorite"
