특정버전 하단풋터 앱종료 수정, 하단 버튼 텍스트 크기 수정

--- a/app/src/main/res/layout/activity_near_map.xml
+++ b/app/src/main/res/layout/activity_near_map.xml
@@ -237,7 +237,7 @@
         android:layout_marginRight="16dp"
         android:textSize="13dp"
         android:textColor="@color/white"
-        android:background="@color/black_two"
+        android:background="@drawable/near_detail_round"
         android:gravity="center"
         android:text="주변 숙소를 선택하면 상세 정보를 보실 수 있습니다"/>
 
