--- a/app/src/main/res/layout/activity_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_hotel_detail.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:background="@android:color/transparent"
-        android:theme="@style/AppTheme.TransNav"
+        android:theme="@style/AppTheme.AppBarOverlay"
         app:elevation="0dp">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -79,79 +79,107 @@
                 </RelativeLayout>
             </RelativeLayout>
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="64dp"
+                android:background="@android:color/transparent"
+                android:minHeight="67dp"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
+                app:layout_collapseMode="pin"
+                android:contentInsetLeft="0dp"
+                android:contentInsetStart="0dp"
+                app:contentInsetLeft="0dp"
+                app:contentInsetStart="0dp"
+                android:contentInsetRight="0dp"
+                android:contentInsetEnd="0dp"
+                app:contentInsetRight="0dp"
+                app:contentInsetEnd="0dp">
+
+                <RelativeLayout
+                    android:id="@+id/parent_view"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="@android:color/transparent"
-                    app:layout_collapseMode="pin">
+                    android:layout_height="54dp">
 
-                    <RelativeLayout
-                        android:id="@+id/parent_view"
+                    <LinearLayout
+                        android:id="@+id/btn_back"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_centerVertical="true">
+                        <ImageView
+                            android:id="@+id/icon_back"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:background="@drawable/ico_titbarw_back"
+                            android:layout_gravity="center"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/btn_zzim"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="16dp"
+                        android:layout_alignParentRight="true">
+                        <ImageView
+                            android:id="@+id/icon_zzim"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:background="@drawable/ico_titbarw_favorite"
+                            android:layout_gravity="center"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/btn_share"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="24dp"
+                        android:layout_toLeftOf="@id/btn_zzim">
+                        <ImageView
+                            android:id="@+id/icon_share"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:background="@drawable/ico_titbarw_share"
+                            android:layout_gravity="center"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tv_title_bar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="54dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@id/btn_back"
+                        android:layout_toLeftOf="@id/btn_share"
+                        android:singleLine="true"
+                        android:textSize="16dp"
+                        android:maxLines="1"
+                        android:gravity="left|center_vertical"
+                        android:layout_marginLeft="10dp"
+                        android:ellipsize="end"
+                        tools:text="xxxxxxxxxxxxxx"/>
+                    
+                    <LinearLayout
+                        android:id="@+id/v_line"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="10dp"
+                        android:layout_alignParentBottom="true"
+                        android:orientation="vertical">
 
-                        <LinearLayout
-                            android:id="@+id/btn_back"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_centerVertical="true">
-                            <ImageView
-                                android:id="@+id/icon_back"
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"
-                                android:background="@drawable/ico_titbarw_back"
-                                android:layout_gravity="center"/>
-                        </LinearLayout>
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="4dp"
+                            android:background="@color/white" />
 
-                        <LinearLayout
-                            android:id="@+id/btn_zzim"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="16dp"
-                            android:layout_alignParentRight="true">
-                            <ImageView
-                                android:id="@+id/icon_zzim"
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"
-                                android:background="@drawable/ico_titbarw_favorite"
-                                android:layout_gravity="center"/>
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:id="@+id/btn_share"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="24dp"
-                            android:layout_toLeftOf="@id/btn_zzim">
-                            <ImageView
-                                android:id="@+id/icon_share"
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"
-                                android:background="@drawable/ico_titbarw_share"
-                                android:layout_gravity="center"/>
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/tv_title_bar"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_centerVertical="true"
-                            android:layout_toRightOf="@id/btn_back"
-                            android:layout_toLeftOf="@id/btn_share"
-                            android:singleLine="true"
-                            android:textSize="16dp"
-                            android:maxLines="1"
-                            android:gravity="left|center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:ellipsize="end"
-                            tools:text="xxxxxxxxxxxxxx"/>
-
-                    </RelativeLayout>
-                </android.support.v7.widget.Toolbar>
-
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="6dp"
+                            android:background="@color/bg_background" />
+                    </LinearLayout>
+                </RelativeLayout>
+            </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
