--- a/app/src/main/res/layout/activity_review_hotel.xml
+++ b/app/src/main/res/layout/activity_review_hotel.xml
@@ -103,7 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/blacktxt"
-                android:textSize="14dp"
+                android:textSize="16dp"
                 android:layout_gravity="bottom"
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="2dp"
@@ -130,59 +130,54 @@
                 android:layout_marginLeft="19dp"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="11dp"
-                        android:textColor="@color/blacktxt"
-                        android:text="서비스 &amp; 친절도"/>
-                </LinearLayout>
+                    android:textSize="14dp"
+                    android:textColor="@color/blacktxt"
+                    android:text="서비스 &amp; 친절도"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="13dp"
-                    android:layout_weight="1">
+                    android:layout_marginLeft="3dp"
+                    android:gravity="right">
                     <ImageView
                         android:id="@+id/sc_star1"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/sc_star2"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/sc_star3"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/sc_star4"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
+
                     <ImageView
                         android:id="@+id/sc_star5"
-                        android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                 </LinearLayout>
             </LinearLayout>
@@ -192,59 +187,55 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginRight="15dp"
+                android:layout_marginLeft="13dp"
                 android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="교통 &amp; 위치"
+                    android:textSize="14dp"
+                    android:textColor="@color/blacktxt"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="0.8">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="교통 &amp; 위치"
-                        android:textSize="11dp"
-                        android:textColor="@color/blacktxt"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="3dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1">
+                    android:gravity="right">
                     <ImageView
                         android:id="@+id/ko_star1"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/ko_star2"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/ko_star3"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/ko_star4"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/ko_star5"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                 </LinearLayout>
             </LinearLayout>
@@ -255,65 +246,61 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginLeft="19dp"
                 android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_checktitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="청결도"
+                    android:textSize="14dp"
+                    android:textColor="@color/blacktxt"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1">
-                    <TextView
-                        android:id="@+id/tv_checktitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="청결도"
-                        android:textSize="11dp"
-                        android:textColor="@color/blacktxt"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="13dp"
-                    android:layout_weight="1">
+                    android:layout_marginLeft="3dp"
+                    android:gravity="right">
                     <ImageView
                         android:id="@+id/c_star1"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/c_star2"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/c_star3"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/c_star4"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/c_star5"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                 </LinearLayout>
             </LinearLayout>
@@ -322,59 +309,55 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginRight="15dp"
+                android:layout_marginLeft="13dp"
                 android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="시설 &amp; 편의성"
+                    android:textSize="14dp"
+                    android:textColor="@color/blacktxt"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="시설 &amp; 편의성"
-                        android:textSize="11dp"
-                        android:textColor="@color/blacktxt"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="13dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1">
+                    android:gravity="right">
                     <ImageView
                         android:id="@+id/sp_star1"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/sp_star2"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/sp_star3"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/sp_star4"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                     <ImageView
                         android:id="@+id/sp_star5"
                         android:layout_gravity="center_vertical"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:paddingRight="1dp"
+                        android:layout_marginRight="1dp"
                         android:scaleType="fitXY" />
                 </LinearLayout>
             </LinearLayout>
