--- a/app/src/main/res/layout/layout_subcity_item.xml
+++ b/app/src/main/res/layout/layout_subcity_item.xml
@@ -36,5 +36,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/back_line"/>
+        android:background="@color/back_line"
+        android:layout_marginLeft="20dp"/>
 </LinearLayout>
