--- a/app/src/main/res/drawable/style_edittext_gray_2border.xml
+++ b/app/src/main/res/drawable/style_edittext_gray_2border.xml
@@ -2,11 +2,11 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/footerview" />
+            <solid android:color="@color/white" />
             <stroke
                 android:width="1dp"
                 android:color="@color/bg_background" />
-            <corners android:radius="4dp" />
+            <corners android:radius="2dp" />
         </shape>
     </item>
 </layer-list>
