--- a/app/src/main/res/layout/activity_mycoupon.xml
+++ b/app/src/main/res/layout/activity_mycoupon.xml
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
-            android:divider="@color/white"
+            android:divider="@android:color/transparent"
             android:listSelector="@android:color/transparent"
             tools:listitem="@layout/layout_my_coupon_item"></ListView>
     </RelativeLayout>
