--- a/app/src/main/res/layout/dialog_push.xml
+++ b/app/src/main/res/layout/dialog_push.xml
@@ -137,7 +137,7 @@
                         android:text="동의하기"
                         android:textColor="@color/white"
                         android:textSize="15dp"
-                        android:background="@color/purple"
+                        android:background="@drawable/purple_2round"
                         android:layout_gravity="center"
                         style="?android:attr/borderlessButtonStyle"/>
                 </LinearLayout>
