--- a/app/src/main/res/layout/layout_favorite_login.xml
+++ b/app/src/main/res/layout/layout_favorite_login.xml
@@ -13,7 +13,7 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:textColor="@color/white"
-        android:background="@color/purple"
+        android:background="@drawable/purple_2round"
         android:textSize="14dp"
         style="?android:attr/borderlessButtonStyle"/>
 
