--- a/app/src/main/res/layout/layout_mypage_join.xml
+++ b/app/src/main/res/layout/layout_mypage_join.xml
@@ -60,7 +60,8 @@
                 android:id="@+id/tv_logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/logout" 
+                android:text="@string/logout"
+                android:textColor="@color/purple"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"/>
 
