--- a/app/src/main/res/layout/layout_mypage_not_join.xml
+++ b/app/src/main/res/layout/layout_mypage_not_join.xml
@@ -84,7 +84,7 @@
                 android:id="@+id/bt_join"
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
-                android:textSize="14dp"
+                android:textSize="13dp"
                 android:textColor="@color/purple"
                 android:text="@string/mypage_join"
                 android:background="@drawable/purple_and_white_round"
@@ -94,11 +94,11 @@
                 android:id="@+id/bt_login"
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
-                android:textSize="14dp"
+                android:textSize="13dp"
                 android:layout_marginLeft="10dp"
                 android:textColor="@color/white"
                 android:text="@string/mypage_login"
-                android:background="@drawable/purple_round"
+                android:background="@drawable/purple_4round"
                 style="?android:attr/borderlessButtonStyle"/>
         </LinearLayout>
     </RelativeLayout>
